--- a/css/main.css
+++ b/css/main.css
@@ -210,7 +210,7 @@ div.search-form {
 #header1{background:url("bg_logo.png") repeat-x scroll 0 0 #FFFFFF;height:75px;}
 #header1 .header-content, #header2{width:950px;text-align:center;margin:0 auto;}
 #header1 .logo{width:700px;text-align:left;float:left;}
-#header1 .logo-link{float:right;margin:26px;}
+#header1 .logo-link{float:right;margin:26px 10px;}
 #header2 .banner{background:url("banner.jpg") repeat-x scroll 0 0 #FFFFFF;height:167px;}
 #header2 .nav a{font-size:12px;color:#AA2434;font-weight:bold;}
 #footer .nav{margin:15px 0;}
