--- a/css/main.css
+++ b/css/main.css
@@ -239,3 +239,5 @@ ol#controls li{	margin:0 10px 0 0;padding:0;float:left;list-style:none;line-heig
 ol#controls li a{float:left;height:20px;line-height:20px;border:1px solid #ccc;background:#DAF3F8;color:#555;padding:0 10px;text-decoration:none;}
 ol#controls li.current a{background:#5DC9E1;color:#fff;}
 ol#controls li a:focus, #prevBtn a:focus, #nextBtn a:focus{outline:none;}
+
+.myview{border:solid 1px #DFDFDF;text-align:left;margin:10px 5px;padding:3px;}
