--- a/css/main.css
+++ b/css/main.css
@@ -219,6 +219,7 @@ div.search-form {
 #footer .footer-content{border:solid 1px #dfdfdf;background:url("bg.png") repeat-x scroll 0 0 #FFFFFF;height:90px;margin:20px auto 0;text-align:center;}
 #footer .footer-content .logo{float:left;margin:20px 10px 20px 150px;}
 #footer .footer-content .copyright{float:left;margin:20px 5px;line-height:25px;}
+#footer .footer-content .link{float:left;margin:20px;line-height:25px;}
 
 .mybox{background:url("bg.png") repeat scroll 0 0 #FFFFFF;border:solid 1px #dfdfdf;text-align:left;margin-bottom:20px;}
 .mybox .title{margin:10px 5px;padding-left:30px;background-image:url("box_logo.jpg");line-height:30px;}
@@ -240,7 +241,6 @@ ol#controls li{	margin:0 10px 0 0;padding:0;float:left;list-style:none;line-heig
 ol#controls li a{float:left;height:20px;line-height:20px;border:1px solid #ccc;background:#DAF3F8;color:#555;padding:0 10px;text-decoration:none;}
 ol#controls li.current a{background:#5DC9E1;color:#fff;}
 ol#controls li a:focus, #prevBtn a:focus, #nextBtn a:focus{outline:none;}
-
 
 .myview{border:solid 1px #DFDFDF;text-align:left;margin:10px 5px;padding:3px;}
 .tree{border:solid 1px #DFDFDF;width:20%;}
