--- a/css/main.css
+++ b/css/main.css
@@ -27,8 +27,8 @@ body {
 }
 
 #footer {
-	padding: 10px;
-	margin: 10px 5px;
+	padding: 5px;
+	margin: 0 5px;
 	font-size: 1em;
 	text-align: center;
 	/*border-top: 1px solid #C9E0ED;*/
